<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_notas"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".NotasActivity"
    tools:ignore="MergeRootFrame">

    <Spinner
        android:id="@+id/menu_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/notasActivity_menus" />

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/ano_et"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:inputType="number"
            android:maxLength="4"
            android:hint="@string/ano_et_hint"
            android:layout_weight="1" />

        <Button
            android:id="@+id/atualiza_diciplinas_bt"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/atualiza_disciplinas_bt_hint" />

    </LinearLayout>

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:max="4"
        android:progress="0" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:text="@string/disciplinas"
        android:gravity="center"
        android:background="@color/custom_table_header"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ListView
        android:id="@+id/notas_lv"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

</LinearLayout>